Prepeare for release v3, fixing consul-template bin

--- a/jobs/consul-template/templates/bin/consul-template_ctl.erb
+++ b/jobs/consul-template/templates/bin/consul-template_ctl.erb
@@ -19,7 +19,7 @@ case $1 in
 
     echo "Starting $JOB_NAME ...."
 
-    exec chpst -u vcap:vcap consul-template \
+    exec chpst -u vcap:vcap consul-template-proper \
 	-consul 127.0.0.1:8500 \
 	-template "${HAPROXY_TEMPLATE}:${HAPROXY_CONFIG}" \
 	-pid-file $PIDFILE \
