--- a/jobs/consul-template/templates/config/haproxy.ctmpl.erb
+++ b/jobs/consul-template/templates/config/haproxy.ctmpl.erb
@@ -33,3 +33,19 @@ backend backend-{{.ID}}
 
 {{end}}
 
+{{range service "rstudio"}}
+frontend frontend-{{.ID}}
+    mode http
+    bind :{{.Port}} ssl crt /var/vcap/jobs/haproxy/config/cert.pem no-sslv3 ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:ECDHE-RSA-RC4-SHA:ECDHE-ECDSA-RC4-SHA:AES128:AES256:RC4-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!PSK
+    option httplog
+    option forwardfor
+    option http-server-close
+    reqadd X-Forwarded-Proto:\ https
+    default_backend backend-{{.ID}}
+
+backend backend-{{.ID}}
+    mode http
+    server {{.Name}} {{.Address}}:{{.Port}} check inter 1000
+
+{{end}}
+
